deployment/app-videos-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-videos-deploy
spec:
  selector:
    matchLabels:
      app: fiapx-videos
  template:
    metadata:
      labels:
        app: fiapx-videos
    spec:
      containers:
        - name: fiapx-videos
          image: DOCKER_IMAGE
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
