deployment/app-videos-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-videos-svc
spec:
  type: NodePort
  selector:
    app: fiapx-videos
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
