deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /swagger-ui
        pathType: Prefix
        backend:
          service:
            name: app-videos-svc
            port:
              number: 8080
      - path: /videos
        pathType: Prefix
        backend:
          service:
            name: app-videos-svc
            port:
              number: 8080
      - path: /sync
        pathType: Prefix
        backend:
          service:
            name: app-videos-svc
            port:
              number: 8080
